<resources>
    <string name="app_name">InfoGaming</string>
    <string name="Free_Games">Free Games</string>
    <string name="Free_Game_Deals">Free Game Deals</string>
    <string name="Newsletter_Subscription">Newsletter Subscription</string>
    <string name="Title">InfoGaming</string>
    <string name="Titlegame">Title Game</string>
    <string name="genre">genre</string>
    <string name="platform">platform</string>
    <string name="publisher">publisher</string>
    <string name="button_get_game">Get Game</string>
    <string name="description">Description</string>
    <string name="articleall">Read News</string>
    <string name="toast_article_opened">Not found article</string>
    <string name="dialog_title_with_game">Opened this Game</string>
    <string name="dialog_message">Do you want to open this game?</string>
    <string name="dialog_title_with_news">Opened this news</string>
    <string name="dialog_message_news">Do you want to open this news?</string>
    <string name="user">User</string>
    <string name="Save">Save NickName</string>
    <string name="NickName">Nickname</string>
</resources>