<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/gameImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/titlegame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titlegame"
                android:textAlignment="center"
                android:textSize="30sp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/descriptiongame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textAlignment="center"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="20sp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/platformTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/platform"
                android:textSize="20sp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/publisherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textSize="20sp"
                android:paddingTop="8dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonGetGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_get_game"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"/>

</androidx.constraintlayout.widget.ConstraintLayout>